Изменения в Взаимодействии с партенром

--- a/docs/Взаимодействие с организацией-партнером.md
+++ b/docs/Взаимодействие с организацией-партнером.md
@@ -4,4 +4,4 @@
 
 ![Y&&Y](/docs/screens/Y&&Y.jpg)
 
-Я посетила мерпориятие "Карьерный марафон" и встретилась там не только с представителями Яндекса. Яндекс, конечно, заопмнился больше остальных: подробный рассказ про стажировки, подарки за прохождение тестов и в целом очень привлекательные вакансии на стажировку, но также я встретила там такие компании, как Wildberries, Лоция и ОТП Банк - это те компании, которые мне бьольше все понравились. Думаю, что в будущем хотела бы попасть в команду Лоции или ОТП Банка Фронтенд-разработчиком или в Wildberries продуктовым дизайнером.
+Я посетила мерпориятие "Карьерный марафон" и встретилась там не только с представителями Яндекса. Яндекс, конечно, запомнился больше остальных: подробный рассказ про стажировки, подарки за прохождение тестов и в целом очень привлекательные вакансии на стажировку, но также я встретила там такие компании, как Wildberries, Лоция и ОТП Банк - это те компании, которые мне больше всего понравились. Думаю, что в будущем хотела бы попасть в команду Лоции или ОТП Банка Фронтенд-разработчиком или в Wildberries продуктовым дизайнером.
